comment out things

--- a/app/views/layouts/redesign/mega_menu/_shop.html.slim
+++ b/app/views/layouts/redesign/mega_menu/_shop.html.slim
@@ -49,13 +49,13 @@ li.shop.menu-item
 
             - if Features.active?(:sales)
               - if sale_active?
-                h4.link-header Sale - Up to 50% Off
-                ul.mega-menu-list
-                  li.mega-menu-list--item= link_to 'All Sale Dresses', sales_collection_path
-                  li.mega-menu-list--item= link_to '15 Percent Off',   dresses_path(sale: 15)
-                  li.mega-menu-list--item= link_to '30 Percent Off',   dresses_path(sale: 30)
-                  li.mega-menu-list--item= link_to '40 Percent Off',   dresses_path(sale: 40)
-                  li.mega-menu-list--item= link_to '50 Percent Off',   dresses_path(sale: 50)
+                h4.link-header Sale - Up to 30% Off
+                /ul.mega-menu-list
+                  /li.mega-menu-list--item= link_to 'All Sale Dresses', sales_collection_path
+                  /li.mega-menu-list--item= link_to '15 Percent Off',   dresses_path(sale: 15)
+                  /li.mega-menu-list--item= link_to '30 Percent Off',   dresses_path(sale: 30)
+                  /li.mega-menu-list--item= link_to '40 Percent Off',   dresses_path(sale: 40)
+                  /li.mega-menu-list--item= link_to '50 Percent Off',   dresses_path(sale: 50)
 
 - if Features.active?(:style_quiz)
   li.menu-item
