--- a/app/views/products/collections/_filters_sort.html.slim
+++ b/app/views/products/collections/_filters_sort.html.slim
@@ -13,7 +13,8 @@
               | Dresses
         .leftPath.visible-xs#filterMobile
           span
-            b
+            .filterIconMobile
+            b.filterMobileText
               | Filter
       .col-md-9.col-xs-8
         .container style='width:100%'
