--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -246,3 +246,6 @@ coffee:
   if fbModalHeight > 0
     $('#slides').css("marginTop", 209)
     $('.product-content').css("top", "23rem")
+
+  if $("#sale-banner").height() > 0
+    $('.product-details').css('margin-top','30px')
