fix nexus 7 and ipad issues

--- a/app/views/products/collections/_filters_sort.html.slim
+++ b/app/views/products/collections/_filters_sort.html.slim
@@ -5,13 +5,13 @@
   .container-fluid.category-controls
     .row-fluid
       .col-md-3.col-xs-4
-        .leftPath.hidden-xs
+        .leftPath.hidden-xs.hidden-sm
           span
             | Home /
           span style="margin-left:5px"
             b
               | Dresses
-        .leftPath.visible-xs#filterMobile
+        .leftPath.visible-xs.visible-sm#filterMobile
           span
             .filterIconMobile
             b.filterMobileText
