--- a/app/views/products/collections/_filters_color_shape_style.html.slim
+++ b/app/views/products/collections/_filters_color_shape_style.html.slim
@@ -1,2 +1,3 @@
-- prerender = true
-= react_component('CollectionFilter', {styles: @filter.styles, shapes: @filter.shapes, colors: Repositories::ProductColors.color_groups, selectColors: @filter.colors}.to_json , { prerender: prerender })
+- cache [:layout, :filter_menu], expires_in: configatron.cache.expire.long do
+  - prerender = true
+  = react_component('CollectionFilter', {styles: @filter.styles, shapes: @filter.shapes, colors: Repositories::ProductColors.color_groups, selectColors: @filter.colors}.to_json , { prerender: prerender })
