--- a/app/views/products/collections/_filters_sort.html.slim
+++ b/app/views/products/collections/_filters_sort.html.slim
@@ -5,16 +5,16 @@
   .container-fluid.category-controls
     .row-fluid
       .col-md-3.col-xs-4
-        .leftPath.hidden-xs.hidden-sm
+        .left-path.hidden-xs.hidden-sm
           span
             | Home /
           span style="margin-left:5px"
             b
               | Dresses
-        .leftPath.visible-xs.visible-sm#filterMobile
+        .left-path.visible-xs.visible-sm#filter-mobile
           span
-            .filterIconMobile
-            b.filterMobileText
+            .filter-icon-mobile
+            b.filter-mobile-text
               | Filter
       .col-md-9.col-xs-8
         .container style='width:100%'
