--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -14,7 +14,7 @@
   = render :partial => 'filters_sort'
   .container-fluid
     .row-fluid
-      .col-md-3.filterCol
+      .col-md-3.filter-col
         div.inner
           = render :partial => 'filters_color_shape_style'
 
