--- a/spree_masterpass/app/views/spree/checkout/payment/_masterpass.html.slim
+++ b/spree_masterpass/app/views/spree/checkout/payment/_masterpass.html.slim
@@ -1,6 +1,6 @@
 - content_for :head do
   = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/integration/MasterPass.client.js'
-  = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/assets/js/MasterPass.omniture.js'
+  / = javascript_include_tag 'https://sandbox.masterpass.com/lightbox/Switch/assets/js/MasterPass.omniture.js'
   = javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js'
 
 / "inline_javascript" should be removed, but in my case, the site was messed up so
