--- a/app/views/products/collections/_filters_sort.html.slim
+++ b/app/views/products/collections/_filters_sort.html.slim
@@ -13,7 +13,7 @@
               | Dresses
         .left-path.visible-xs.visible-sm#filter-mobile
           span
-            .filter-icon-mobile
+            i.fa.fa-filter
             b.filter-mobile-text
               | Filter
       .col-md-9.col-xs-8
