refactor and revert c style

--- a/app/views/products/collections/_filters_color_shape_style.html.slim
+++ b/app/views/products/collections/_filters_color_shape_style.html.slim
@@ -1,3 +1,7 @@
 - cache [:layout, :filter_menu, @filter.to_s], expires_in: configatron.cache.expire.long do
   - prerender = true
-  = react_component('CollectionFilter', {styles: @filter.styles, shapes: @filter.shapes, colors: Repositories::ProductColors.color_groups, selectColors: @filter.colors}.to_json , { prerender: prerender })
+  - colors  = Repositories::ProductColors.color_groups
+  - selectColors = @filter.colors
+  - shapes = @filter.shapes
+  - styles = @filter.styles
+  = react_component('CollectionFilter', {styles: styles, shapes: shapes, colors: colors, selectColors: selectColors} , { prerender: prerender })
