--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -210,7 +210,9 @@
 	@media(max-width: $bootstrap-md-width){
 		.container-fluid{
 			padding:0;
-
+			.left-path{
+				margin-left: 12px;
+			}
 			.filter-mobile-text{
 				margin-left: 20px;
 			}
