Never keep around dead code, use new payment step

--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -27,7 +27,7 @@
 
         .checkout-step data-name="payment"
           - if current_step.eql?('payment')
-            = render 'payment_step_v2', current_step: current_step
+            = render 'payment_step', current_step: current_step
 
         .row : .comodo.visible-xs.text-center : p
           = image_tag "comodo-ssl.png", alt: "SSL", height: '35px', width: '112px', style: 'margin-top:25px;margin-bottom:25px'
