--- a/app/views/checkout/v1/spree/checkout/_payment_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_payment_step.html.slim
@@ -23,6 +23,11 @@ p All transactions are secure and encrypted. Credit card information is never st
       .panel-collapse.in
         .panel-body
           = form_for @order, :url => update_checkout_path(@order.state), :remote => true, :html => { :class => ['payment_details form-global checkout-form', 'credit_card', @credit_card_gateway.class.name.demodulize.underscore] } do |form|
+            - payment_failure = payment_failed_messages(@order.errors.full_messages.first.to_s)
+            - if payment_failure
+              .title Try a different payment method?
+              .sub We'd love to make this happen for you, but there was a problem with your credit card.
+
             = render 'shared/error_messages', :target => @order, :view => "payment"
 
             = hidden_field_tag "order[payments_attributes][][payment_method_id]", @credit_card_gateway.id
@@ -45,4 +50,3 @@ p
 .row
   .col-md-12
     = link_to '< Return to your information', checkout_state_path('address'), :remote => false, class: 'edit'
-
